--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,18 +7,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: [8.2, 8.1, 8.0]
-        laravel: [^10.0, ^9.0, ^8.0]
+        php: [8.2, 8.1]
+        laravel: [^10.0, ^9.0]
         include:
-          - laravel: ^8.0
-            testbench: ^6.0
           - laravel: ^9.0
             testbench: ^7.0
           - laravel: ^10.0
             testbench: ^8.0
-        exclude:
-          - php: 8.0
-            laravel: ^10.0
 
     name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }}
 
