--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,19 +7,29 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: [8.2, 8.1]
-        laravel: [^10.0, ^9.0]
+        php: [8.3, 8.2]
+        laravel: [^11.0, ^10.0]
+        dependency-version: [prefer-lowest, prefer-stable]
         include:
-          - laravel: ^9.0
-            testbench: ^7.0
           - laravel: ^10.0
             testbench: ^8.0
+          - laravel: "^11.0"
+            testbench: 9.*
+        exclude:
+          - laravel: "^11.0"
+            php: 8.1
+          - laravel: "^11.0"
+            php: 8.0
+          - laravel: "^10.0"
+            php: 8.0
+          - laravel: "^8.12"
+            php: 8.3
 
     name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }}
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -36,7 +46,7 @@ jobs:
       - name: Install dependencies
         run: |
           composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
-          composer update --prefer-dist --no-interaction
+          composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
 
       - name: Execute tests
         run: vendor/bin/phpunit
