--- a/composer.json
+++ b/composer.json
@@ -20,14 +20,16 @@
   ],
   "require": {
     "php": "^8.1",
-    "illuminate/http": "^9.34 || ^10.0",
-    "illuminate/support": "^9.34 || ^10.0",
-    "guzzlehttp/guzzle": "^7.2",
-    "vonage/client-core": "^4.1"
+    "guzzlehttp/guzzle": "^7.8",
+    "illuminate/http": "^10.0 || ^11.0",
+    "illuminate/support": "^10.0 || ^11.0",
+    "vonage/client-core": "^4.6"
   },
   "require-dev": {
-    "orchestra/testbench": "^7.12 || ^8.0",
-    "phpunit/phpunit": "^9.5"
+    "larastan/larastan": "^2.9",
+    "laravel/pint": "^1.15",
+    "orchestra/testbench": "^7.12 || ^8.17 || ^9.0",
+    "phpunit/phpunit": "^9.4 || ^10.1"
   },
   "autoload": {
     "psr-4": {
@@ -47,6 +49,8 @@
     "preferred-install": "dist"
   },
   "scripts": {
+    "format": "pint",
+    "analyse": "phpstan analyse",
     "test": "vendor/bin/phpunit",
     "test:coverage": "vendor/bin/phpunit --coverage-clover=coverage.xml",
     "post-autoload-dump": [
